# uWLKV

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/workflows/: sonar.yml
src/: entry.c  entry.h  map.c  map.h  storage.c  storage.h  uwlkv.c
src/include/: uwlkv.h
tests/: catch.hpp  helpers.cpp  helpers.h  main.cpp  nvram_mock.cpp  nvram_mock.h  tests.cpp
